# ChangeLog for sys-apps/rlocate
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/rlocate/ChangeLog,v 1.21 2006/12/21 04:42:10 vapier Exp $

*rlocate-0.5.4 (21 Dec 2006)

  21 Dec 2006; Mike Frysinger <vapier@gentoo.org> +rlocate-0.5.4.ebuild:
  Version bump.

  07 Oct 2006; Jeroen Roovers <jer@gentoo.org> rlocate-0.5.3.ebuild:
  Marked ~hppa.

*rlocate-0.5.3 (27 Sep 2006)

  27 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.3-build.patch, +rlocate-0.5.3.ebuild:
  Version bump.

  23 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.2-utsversion.patch, rlocate-0.5.2.ebuild:
  Add support for 2.6.18+ via utsversion.h #147567 by Tobias Klausmann.

  16 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.2-no-devfs.patch, rlocate-0.5.2.ebuild:
  Clean out devfs #140848 by CBke.

*rlocate-0.5.2 (16 Sep 2006)

  16 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.2-build.patch, +rlocate-0.5.2.ebuild:
  Version bump.

*rlocate-0.5.1 (21 Apr 2006)

  21 Apr 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.1-build.patch, +rlocate-0.5.1.ebuild:
  Version bump.

*rlocate-0.5.0-r1 (15 Apr 2006)

  15 Apr 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.0-settings.patch, +rlocate-0.5.0-r1.ebuild:
  Fix misc broken hardcoded values #130066 by CBke.

*rlocate-0.5.0 (15 Apr 2006)

  15 Apr 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.5.0-build.patch, +rlocate-0.5.0.ebuild:
  Version bump.

*rlocate-0.4.3 (11 Feb 2006)

  11 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.4.3-build.patch, +rlocate-0.4.3.ebuild:
  Version bump.

*rlocate-0.4.2 (20 Jan 2006)

  20 Jan 2006; Mike Frysinger <vapier@gentoo.org> +rlocate-0.4.2.ebuild:
  Version bump.

*rlocate-0.4.1 (19 Jan 2006)

  19 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/rlocate-0.4.1-build.patch, +rlocate-0.4.1.ebuild: