@@ -1,0 +1,3 @@
+MD5 18a92b443575e15811b42db261393050 rlocate-0.5.5.tar.gz 182210
+RMD160 97d38504bf25d2230485b544216de7dd18e950bb rlocate-0.5.5.tar.gz 182210
+SHA256 30af224698a300a54808f74b3186b993d765e9be2cbf1c79c5779596eb2c604b rlocate-0.5.5.tar.gz 182210
