@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/rlocate
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/rlocate/ChangeLog,v 1.21 2006/12/21 04:42:10 vapier Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/rlocate/ChangeLog,v 1.22 2007/01/08 09:34:16 vapier Exp $
+
+*rlocate-0.5.5 (08 Jan 2007)
+
+  08 Jan 2007; Mike Frysinger <vapier@gentoo.org> +rlocate-0.5.5.ebuild:
+  Version bump.
 
 *rlocate-0.5.4 (21 Dec 2006)
 
